Fri Oct 13 19:39:53 2000  George Lebl <jirka@5z.com>

	* panel_config_global.h, session.c, gnome-panel-properties.c,
	  basep-widget.c:  add a global option to turn off the collision
	  avoidance (it's on by default of course though)

	* basep-widget.c, foobar-widget.c: panel_list is a GSList not
	  a GList.

Fri Oct 13 17:26:25 2000  George Lebl <jirka@5z.com>

	* aligned-widget.c, basep-widget.[ch], border-widget.h,
	  panel-types.h, edge-widget.c:  Add simple panel collision
	  avoidance.  Bottom/Top panels take preference over left/right
	  panels.  We also assume only 1 panel per position, so we don't
	  overlap only panels at right angles to each other.

Wed Oct 11 18:09:40 2000  George Lebl <jirka@5z.com>

	* xstuff.c: don't assume return from XGetWMHints is allways non-null,
	  though it's really overly paranoid.

Wed Oct 11 00:23:31 2000  George Lebl <jirka@5z.com>

	* launcher.[ch], menu.c:  Add revert button to desktop entry property
	  editors, and use an enum instead of button numbers to avoid future
	  fuckups.  Again some completely random cosmetic cleanup as well.

Sat Oct 07 23:44:48 2000  George Lebl <jirka@5z.com>

	* applet-widget.c, applet.c, panel-util.[ch], launcher.[ch],
	  menu.[ch], menu-properties.[ch], panel_config.c:  General cleanup
	  and some const-ization of things.  But mostly cosmetic things.

	* panel_config.c, launcher.c, menu.c, menu-properties.c:  Make sure
	  a widget is focused after a dialog is shown

	* menu.c: Always make the properties item sensitive, but if the
	  item is not writable make the entire dialog unsensitive, so this
	  way the user can inspect the info in the dentry, but not change it

Sat Oct 07 21:59:28 2000  George Lebl <jirka@5z.com>

	* gnome-run.c: add ability to launch certain urls
	  (http://,https://,gopher:// and ftp://) from the run box

Sat Oct 07 21:03:40 2000  George Lebl <jirka@5z.com>

	* launcher.c, menu.c, panel-util.[ch]: cleanup, minor leak fixes,
	  some hack-explanatory comments
