@@ -23,7 +23,7 @@ Vertigo/2.0 items
   allow even customization of the panel from outside.  Also the applets would
   become bonobo controls.
 
-* GConf/GnoP using configuration boxes
+* GConf/PonG using configuration boxes
 
 * tabbed panels, these could be done in a variety of ways, such as a
   rotating block, real tabs, scrolling
