@@ -1,3 +1,7 @@
+Sat Oct 14 14:50:18 2000  George Lebl <jirka@5z.com>
+
+	* main.c: cleanups, remove unused extern
+
 Fri Oct 13 19:39:53 2000  George Lebl <jirka@5z.com>
 
 	* panel_config_global.h, session.c, gnome-panel-properties.c,
